# home-ops

./: .devfile.yaml  .envrc  .gitignore  .gitlab-ci.yml  .mise.toml  .pre-commit-config.yaml  .renovaterc.json5  .sops.yaml  Brewfile  LICENSE  README.md  Taskfile.yaml  aqua.yaml  fio-cmp.yaml  fio.yaml  pyproject.toml  tes.py  test-claim-iscsi.yaml  test-claim-nfs.yaml  test.yaml  tls.crt  watch_20250531-120500  watch_20250617-165454  watch_20250627-110249
.archive/.github/: labeler.yaml  labels.yaml
.archive/latest/: .gitlab-ci.yml  .gitlabbot.yaml  .sops.yaml  .sourceignore  README.md  gitlab-secrets.yaml  jobs.yaml  poetry.toml  pyproject.toml
.archive/workflows/: docs.yaml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: CONTRIBUTING.md  SECURITY.md  labeler.yaml  labels.yaml  renovate.json5
.github/renovate/: clusters.json5  customManagers.json5  groups.json5
.github/workflows/: docs.yaml  flux-diff.yaml  flux-hr-sync.yaml  flux-image-test.yaml  flux-ks-sync.yaml  flux-local.yaml  tag.yaml  (+9 more)
.gitlab/: .gitlab-webide.yml  renovate.json5
.renovate/: renovateUser.json5
ansible/: requirements.txt  requirements.yaml
bootstrap/: helmfile.yaml  resources.yaml.j2  secrets.yaml.tpl  wipe-rook.yaml  zap-rook.yaml
docs/: .npmrc  docusaurus.config.js  gitlab.md  introduction.mdx  mint.json  package.json  sidebars-guides.js  sidebars.js
talos/: machineconfig.yaml.j2  machineconfig.yaml.j2.old  schematic.yaml
terraform/: terraform-secrets.secret.sops.yaml
tools/: data-rook.yaml  kbench.yaml  main.sh  wipe-rook-resources.sh  wiperook.yaml
(+1936 files in other folders)
